[package]
name = "ohmysmtp"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "An OhMySMTP client"
repository = "https://github.com/sigaloid/ohmysmtp/"
readme = "README.md"
keywords = ["smtp", "email", "ohmysmtp"]
categories = ["api-bindings", "email"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
email-validation = ['email-address-parser']

[dependencies]
base64 = "0.13.0"
email-address-parser = { version = "1.0.3", optional = true }
nanoserde = "0.1.29"
ureq = "2.3.0"
